--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^5.10.14",
     "node-fetch": "^2.6.1",
     "telegraf": "^4.2.1",
+    "telegraf-question": "^1.1.4",
     "telegraf-session-local": "^2.1.0"
   },
   "devDependencies": {
