doc the bot quires

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "rm -rf dist && tsc",
     "setup": "npm install && npm update",
     "start:dev": "NODE_ENV=development nodemon src/index.ts",
-    "start:prod": "npm run build && NODE_ENV=developmemt node dist/index.js"
+    "start:prod": "npm run build && NODE_ENV=developmemt node dist/index.js",
+    "gen-doc": "typedoc"
   },
   "repository": {
     "type": "git",
